# KickIO

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: lint.yml
kickio/: __init__.py
